Got the backend close to done for the homepage. Working on the NFT page.

--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,11 @@
     <img src="./fail-small.png" class="nft-large-pics">
     <img src="./fail-small.png" class="nft-large-pics">
     <img src="./fail-small.png" class="nft-large-pics">
+    <button type="button" id="test-btn" >Click me!</button>
+
 </body>
 
-<!-- <script src="../node_modules/axios/dist/axios.min.js"></script> -->
+
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
