Made changes to the NFT item page.

--- a/client/index.html
+++ b/client/index.html
@@ -8,13 +8,37 @@
 </head>
 <body>
     <h1>Testing 1 2 3 4.</h1>
-    <img src="./fail-small.png" class="nft-large-pics">
-    <img src="./fail-small.png" class="nft-large-pics">
-    <img src="./fail-small.png" class="nft-large-pics">
-    <img src="./fail-small.png" class="nft-large-pics">
-    <img src="./fail-small.png" class="nft-large-pics">
-    <img src="./fail-small.png" class="nft-large-pics">
-    <button type="button" id="test-btn" >Click me!</button>
+    <div class="items" id="item0">
+        <img src="./fail-small.png" class="nft-large-pics" id="nftPic0">
+        <h2 class="names" id="names0">NFT name - Artist name</h2>
+        <h3 class="prices" id="prices0">$100</h3>
+    </div>
+    <div class="items" id="item1">
+        <img src="./fail-small.png" class="nft-large-pics" id="nftPic1">
+        <h2 class="names" id="names1">NFT name - Artist name</h2>
+        <h3 class="prices" id="prices1">$100</h3>
+    </div>
+    <div class="items" id="item2">
+        <img src="./fail-small.png" class="nft-large-pics" id="nftPic2">
+        <h2 class="names" id="names2">NFT name - Artist name</h2>
+        <h3 class="prices" id="prices2">$100</h3>
+    </div>
+    <div class="items" id="item3">
+        <img src="./fail-small.png" class="nft-large-pics" id="nftPic3">
+        <h2 class="names" id="names3">NFT name - Artist name</h2>
+        <h3 class="prices" id="prices3">$100</h3>
+    </div>
+    <div class="items" id="item4">
+        <img src="./fail-small.png" class="nft-large-pics" id="nftPic4">
+        <h2 class="names" id="names4">NFT name - Artist name</h2>
+        <h3 class="prices" id="prices4">$100</h3>
+    </div>
+    <div class="items" id="item5">
+        <img src="./fail-small.png" class="nft-large-pics" id="nftPic5">
+        <h2 class="names" id="names5">NFT name - Artist name</h2>
+        <h3 class="prices" id="prices5">$100</h3>
+    </div>
+
 
 </body>
 
