--- a/client/nft.html
+++ b/client/nft.html
@@ -1,17 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is a test.</title>
 </head>
-<body>
-    <h1>This is only a test, don't panic.</h1>
 
-    <img src="./fail-large.png" id="mainPic">
+<body>
+
+    <div id="leftSide">
+        <img src="./fail-large.png" id="mainPic">
+    </div>
+
+    <div id="rightSide">
+
+        <div id="names">
+            <h1 id="nftName">"Art Name"</h1>
+            <h1 id="artistName">By Artist Name</h1>
+        </div>
+
+        <div class="totals" id="basePriceDiv">
+            <h1>Base Price: </h1>
+            <h1 class="priceAmounts" id="basePriceTotal">$60000</h1>
+        </div>
+
+        <div id="addons">
+
+            <div id="ledAddon">
+                <input type="checkbox" id="ledCheckbox">
+                <h2>Add LED Lights - </h2>
+                <h2 class="priceAmounts" id="ledPrice">$150</h2>
+            </div>
+
+            <div id="signedCopyAddon">
+                <input type="checkbox" id="signedCopyCheckbox">
+                <h2>Add Signed Copy - </h2>
+                <h2 class="priceAmounts" id="signedCopyPrice">$500</h2>
+            </div>
+
+            <div id="posterAddon">
+                <input type="checkbox" id="posterCheckbox">
+                <h2>Add Poster Copy - </h2>
+                <h2 class="priceAmounts" id="posterPriceAmount">$20</h2>
+            </div>
+
+        </div>
+
+        <div id="beforeCheckout">
+            <div class="totals" id="grandTotalDiv">
+                <h1>Grand Total: </h1>
+                <h1 class="priceAmounts" id="grandTotalAmount">$60,170</h1>
+            </div>
+
+            <button id="addToCartBtn">Add To Cart</button>
+
+        </div>
+
+
+    </div>
+
+
+
 
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./nft.js"></script>
+
 </html>
