Fixed bug on delete item in cart image disappearing. Fixed template text showing on homepage and item before loading item information.

--- a/client/index.html
+++ b/client/index.html
@@ -45,43 +45,43 @@
                 <div <div class="items" id="item0">
                     <img src="./fail-small.png" class="nft-large-pics" id="nftPic0">
                     <div class="information">
-                        <h2 class="names" id="names0">NFT name - Artist name</h2>
-                        <h3 class="prices" id="prices0">$100</h3>
+                        <h2 class="names" id="names0"></h2>
+                        <h3 class="prices" id="prices0"></h3>
                     </div>
                 </div>
                 <div class="items" id="item1">
                     <img src="./fail-small.png" class="nft-large-pics" id="nftPic1">
                     <div class="information">
-                        <h2 class="names" id="names1">NFT name - Artist name</h2>
-                        <h3 class="prices" id="prices1">$100</h3>
+                        <h2 class="names" id="names1"></h2>
+                        <h3 class="prices" id="prices1"></h3>
                     </div>
                 </div>
                 <div class="items" id="item2">
                     <img src="./fail-small.png" class="nft-large-pics" id="nftPic2">
                     <div class="information">
-                        <h2 class="names" id="names2">NFT name - Artist name</h2>
-                        <h3 class="prices" id="prices2">$100</h3>
+                        <h2 class="names" id="names2"></h2>
+                        <h3 class="prices" id="prices2"></h3>
                     </div>
                 </div>
                 <div class="items" id="item3">
                     <img src="./fail-small.png" class="nft-large-pics" id="nftPic3">
                     <div class="information">
-                        <h2 class="names" id="names3">NFT name - Artist name</h2>
-                        <h3 class="prices" id="prices3">$100</h3>
+                        <h2 class="names" id="names3"></h2>
+                        <h3 class="prices" id="prices3"></h3>
                     </div>
                 </div>
                 <div class="items" id="item4">
                     <img src="./fail-small.png" class="nft-large-pics" id="nftPic4">
                     <div class="information">
-                        <h2 class="names" id="names4">NFT name - Artist name</h2>
-                        <h3 class="prices" id="prices4">$100</h3>
+                        <h2 class="names" id="names4"></h2>
+                        <h3 class="prices" id="prices4"></h3>
                     </div>
                 </div>
                 <div class="items" id="item5">
                     <img src="./fail-small.png" class="nft-large-pics" id="nftPic5">
                     <div class="information">
-                        <h2 class="names" id="names5">NFT name - Artist name</h2>
-                        <h3 class="prices" id="prices5">$100</h3>
+                        <h2 class="names" id="names5"></h2>
+                        <h3 class="prices" id="prices5"></h3>
                     </div>
                 </div>
             </div>
